# RunningBPM

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  analyze_extracted_beat.py  batch_mix.py  batch_test_extraction_quality.py  compare_source_and_extracted.py  debug_metronome.py  denoise_by_median.py  docker-compose.yml  extract_all_candidates.py  start_backend.sh  start_frontend.sh  test_audio_pattern_detection.py  test_metronome_extraction.py  test_single_file.py
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  process-audio.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/services/: audio_service.py  format_service.py  progress_service.py
extraction_baseline/: baseline_results.json
frontend/: .env.example  Dockerfile  build_log.txt  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AudioPlayer.tsx  InteractiveBackground.tsx  Layout.css  Layout.tsx  MetronomeDetectionAnimation.css  MetronomeDetectionAnimation.tsx  MixingAnimation.css  MixingAnimation.tsx  PaceCalculator.css  PaceCalculator.tsx  ProgressBar.tsx  RunningScene.css  RunningScene.tsx
frontend/src/components/shared/: Wizard.css  (+5 more)
frontend/src/pages/: Dashboard.css  Dashboard.tsx  Extractor.css  Extractor.tsx  Mixer.css  Mixer.tsx  Stitcher.css  Stitcher.tsx
